
[B][COLOR red]Update - v1.5.3 - Sept. 21, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added quality check for 1O8Op and 72Op where some uploaders are using the letter "O" vs a zero.[/I]
[COLOR yellow]--[/COLOR][I] EasyNews tweaks and now pulls in a few additional sources.[/I]
[COLOR yellow]--[/COLOR][I] Library scraper tweaks, source file name was not being passed.[/I]


[B][COLOR red]Update - v1.5.2 - Sept. 19, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed encoding issue when opening changelog file.[/I]


[B][COLOR red]Update - v1.5.1 - Sept. 19, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed missing [B]"amp;"[/B] in settings.xml causing settings cleaner to error.[/I]


[B][COLOR red]Update - v1.5.0 - Sept. 18, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] [B]"Ultradox"[/B] Russian group has been added to list of undesirables.[/I]
[COLOR yellow]--[/COLOR][I] You can now view, clear, and upload to pastebin the FenomScrapers log file.  See new settings under [B]"Debug"[/B] category.[/I]


[B][COLOR red]Update - v1.4.9 - Sept. 09, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] [B]"Extratorrent"[/B] scraper site is back up.[/I]
[COLOR yellow]--[/COLOR][I] Few tweaks to magnetdl scraper for title issue due to site query phrase restrictions.[/I]


[B][COLOR red]Update - v1.4.8 - Sept. 06, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] [B]"Extratorrent"[/B] and [B]"Magnet4you"[/B] scrapers have been removed, sites appear to be dead.[/I]
[COLOR yellow]--[/COLOR][I] Fixed size reporting issue from [B]"Torrentproject2"[/B].[/I]


[B][COLOR red]Update - v1.4.7 - Aug. 27, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Dutch lang file update.[/I]
[COLOR yellow]--[/COLOR][I] ETTV fixed size and seeder reporting.[/I]
[COLOR yellow]--[/COLOR][I] SOLIDTORRENTS, changed to sort by seeders.[/I]


[B][COLOR red]Update - v1.4.6 - Aug. 25, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added ability to return all scraper sources to support addons bypassing provider setting.[/I]

