@@ -1,4 +1,4 @@
-<addon id="script.module.fenomscrapers" name="FenomScrapers Module" version="1.5.3" provider-name="Mr-Kodi">
+<addon id="script.module.fenomscrapers" name="FenomScrapers Module" version="1.5.4" provider-name="Mr-Kodi">
 	<requires>
 		<import addon="script.module.requests" />
 		<import addon="script.module.myaccounts" version="1.0.0" />
@@ -24,10 +24,9 @@
 			<screenshot></screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v1.5.3 - Sept. 21, 2021[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Added quality check for 1O8Op and 72Op where some uploaders are using the letter "O" vs a zero.[/I]
-[COLOR yellow]--[/COLOR][I] EasyNews tweaks and now pulls in a few additional sources.[/I]
-[COLOR yellow]--[/COLOR][I] Library scraper tweaks, source file name was not being passed.[/I]
+[B][COLOR red]Update - v1.5.4 - Sept. 25, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Improved regex range check of show packs.  This helps to pull a few new sources that previously failed.[/I]
+[COLOR yellow]--[/COLOR][I] BITLORD scraper tweak to deal with their size reporting MB vs GB from one source link to the next.[/I]
 		</news>
 	</extension>
 </addon>
